--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>World Clock</h1>
-    <footer>This project is coded by Nicolette Steenkamp, code can be found here <a href="#" target="_blank">Github</a> and hosted here <a href="#" target="_blank">Netlify</a></footer>
+    <footer>This project is coded by Nicolette Steenkamp, code is available here <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted here <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
     <script src="Javascript/index.js"></script>
 </body>
 </html>
