--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
     <title>WORLD CLOCK-Nicolette Steenkamp</title>
 </head>
 <body>
+    <div class="container">
     <h1>World Clock</h1>
+    <select name="" id="">
+        <option value="">Select City....</option>
+        <option value="Africa/Johannesburg">Johannesburg</option>
+        <option value=""></option>
+        <option value=""></option>
+        <option value=""></option>
+    </select>
+    <div class="city">
+        <h2>Johannesburg</h2>
+        <div class="date">May 23rd 2024</div>
+        <div class="time">12:17:35 PM</div>
+
+    </div>
+</div>
     <footer>This project is coded by Nicolette Steenkamp, code is available here <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted here <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
     <script src="Javascript/index.js"></script>
 </body>
