added styling and added a div

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         <option value=""></option>
         <option value=""></option>
     </select>
+    
     <div class="city">
+        <div>
         <h2>Johannesburg</h2>
         <div class="date">May 23rd 2024</div>
-        <div class="time">12:17:35 PM</div>
-
-    </div>
+        </div>
+        <div class="time">12:17:35 <small>PM</small></div>
+        </div>
 </div>
-    <footer>This project is coded by Nicolette Steenkamp, code is available here <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted here <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
+    <footer>This project is coded by <strong>Nicolette Steenkamp</strong>,code is open sourced on <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted here <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
     <script src="Javascript/index.js"></script>
 </body>
 </html>
