added javascript,moment.js and moment timezones

--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
     <select name="" id="">
         <option value="">Select City....</option>
         <option value="Africa/Johannesburg">Johannesburg</option>
-        <option value=""></option>
+        <option value="Europe/Stockholm">Stockholm</option>
         <option value=""></option>
         <option value=""></option>
     </select>
     
-    <div class="city">
+    <div class="city" id="johannesburg">
         <div>
         <h2>Johannesburg</h2>
-        <div class="date">May 23rd 2024</div>
+        <div class="date"></div>
         </div>
-        <div class="time">12:17:35 <small>PM</small></div>
+        <div class="time"></div>
         </div>
+        <div class="city" id="stockholm">
+            <div>
+            <h2>Stockholm</h2>
+            <div class="date"></div>
+            </div>
+            <div class="time"></div>
+            </div>
 </div>
     <footer>This project is coded by <strong>Nicolette Steenkamp</strong>,code is open sourced on <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted here <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
     <script src="Javascript/index.js"></script>
