--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <body>
     <div class="container">
     <h1>World Clock</h1>
-    <select name="" id="">
+    <select name="" id="city">
         <option value="">Select City....</option>
         <option value="Africa/Johannesburg">Johannesburg</option>
         <option value="Europe/Stockholm">Stockholm</option>
-        <option value=""></option>
-        <option value=""></option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="America/New_York">New York</option>
     </select>
-    
+
+    <div id="cities">
     <div class="city" id="johannesburg">
         <div>
         <h2>Johannesburg</h2>
@@ -33,6 +34,7 @@
             </div>
             <div class="time"></div>
             </div>
+        </div>
 </div>
     <footer>This project is coded by <strong>Nicolette Steenkamp</strong>,code is open sourced on <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted here <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
     <script src="Javascript/index.js"></script>
