--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <option value="Europe/Stockholm">Stockholm</option>
         <option value="Europe/Paris">Paris</option>
         <option value="America/New_York">New York</option>
+        <option value="Europe/London">London</option>
     </select>
 
     <div id="cities">
