--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>World Clock</h1>
     <select name="" id="city">
         <option value="">Select City....</option>
+        <option value="current">My current location</option>
         <option value="Africa/Johannesburg">Johannesburg</option>
         <option value="Europe/Stockholm">Stockholm</option>
         <option value="Europe/Paris">Paris</option>
