--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <option value="current">My current location</option>
         <option value="Africa/Johannesburg">Johannesburg</option>
         <option value="Europe/Stockholm">Stockholm</option>
+        <option value="Australia/Brisbane">Brisbane</option>
         <option value="Europe/Paris">Paris</option>
         <option value="America/New_York">New York</option>
         <option value="Europe/London">London</option>
