--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             </div>
             <div class="time"></div>
             </div>
+            <div class="city" id="auckland">
+                <div>
+                <h2>Auckland</h2>
+                <div class="date"></div>
+                </div>
+                <div class="time"></div>
+                </div>
         </div>
 </div>
     <footer>This project is coded by <strong>Nicolette Steenkamp</strong>,code is open sourced on <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted here <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
