--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
         </div>
 </div>
-    <footer>This project is coded by <strong>Nicolette Steenkamp</strong>,code is open sourced on <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted here <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
+    <footer>This project is coded by <strong>Nicolette Steenkamp</strong>,code is open sourced on <a href="https://github.com/NicoletteSteenkamp/world-clock-shecodes" target="_blank">Github</a> and hosted on <a href="https://world-clock-project-shecodes-js.netlify.app/" target="_blank">Netlify</a></footer>
     <script src="Javascript/index.js"></script>
 </body>
 </html>
